# german-vi

./: .gitignore  application.py  config.py  game.py  main.py  pyproject.toml  views.py  window.py  words.csv
core/: game.py  question.py  round.py  state.py  word.py
data/: words.csv
test/: test_data.csv  test_game.py
ui/: __init__.py  application.py  views.py  window.py
ui/console/: console.py
ui/window/: views.py  views_manager.py  window.py  window_impl.py
