[tool.poetry]
name = "german-vi"
version = "0.1.0"
description = ""
authors = ["Clément Hue <clementhue@hotmail.fr>"]
readme = "README.md"
packages = [{include = "german_vi"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
